fixed buttons on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -819,6 +819,7 @@ h3 {
   }
 
   .navbar-container ul {
+    padding-left: 3px;
     justify-content: center;
   }
 
@@ -828,7 +829,7 @@ h3 {
 
   .navbar-container a {
     padding: 8px 15px;
-    font-size: 0.9em;
+    font-size: 0.7em;
   }
 
   .track-album {
@@ -985,4 +986,17 @@ h3 {
 }
 .playlist-info p {
     margin-top: 5px;
+}
+
+/* On mobile specifically, you might want it even taller */
+@media (max-width: 400px) {
+  iframe {
+    height: 90vh;
+  }
+}
+
+iframe {
+  width: 100%;
+  height: 80vh; /* Takes up 80% of the device screen height */
+  border: none;
 }
